// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toast /> Should render a wide toast 1`] = `
<div>
  <div
    class="sc-gswNZR iGunOq"
  >
    <div
      class="sc-dkrFOg dlORJV"
      role="alert"
    >
      I’m big and beautiful
    </div>
  </div>
</div>
`;

exports[`<Toast /> render default toast 1`] = `
<div>
  <div
    class="sc-gswNZR jHicpH"
  >
    <div
      class="sc-dkrFOg dlORJV"
      role="alert"
    >
      Default content
    </div>
  </div>
</div>
`;

exports[`<Toast /> render primary toast 1`] = `
<div>
  <div
    class="sc-gswNZR bdwhLx"
  >
    <div
      class="sc-dkrFOg dlORJV"
      role="alert"
    >
      primary
       content
    </div>
  </div>
</div>
`;

exports[`<Toast /> render secondary toast 1`] = `
<div>
  <div
    class="sc-gswNZR jHicpH"
  >
    <div
      class="sc-dkrFOg dlORJV"
      role="alert"
    >
      secondary
       content
    </div>
  </div>
</div>
`;

exports[`<Toast /> render with from-bottom animated toast 1`] = `
<div>
  <div
    class="sc-gswNZR gLMLbN"
  >
    <div
      class="sc-dkrFOg dlORJV"
      role="alert"
    >
      from-bottom
       content
    </div>
  </div>
</div>
`;

exports[`<Toast /> render with from-left animated toast 1`] = `
<div>
  <div
    class="sc-gswNZR fxiFta"
  >
    <div
      class="sc-dkrFOg dlORJV"
      role="alert"
    >
      from-left
       content
    </div>
  </div>
</div>
`;

exports[`<Toast /> render with from-right animated toast 1`] = `
<div>
  <div
    class="sc-gswNZR fAcLrx"
  >
    <div
      class="sc-dkrFOg dlORJV"
      role="alert"
    >
      from-right
       content
    </div>
  </div>
</div>
`;

exports[`<Toast /> render with from-top animated toast 1`] = `
<div>
  <div
    class="sc-gswNZR FexLi"
  >
    <div
      class="sc-dkrFOg dlORJV"
      role="alert"
    >
      from-top
       content
    </div>
  </div>
</div>
`;
